Suivre(Etape 3-4): Ajout de la DB et model
[2h00] [Done]

--- a/app-teachers-adonisjs/resources/views/partials/header.edge
+++ b/app-teachers-adonisjs/resources/views/partials/header.edge
@@ -17,9 +17,7 @@
     </div>
     </div>
     <nav>
-    <h2>Zone pour le menu</h2>
-    <a href="index.html">Accueil</a>
-    <a href="addTeacher.html">Ajouter un enseignant</a>
-   3 / 5
-    </nav>
+        <a href="{{ route('home') }}">Accueil</a>&nbsp;
+        <a href="addTeacher.html">Ajouter un enseignant</a>
+       </nav>
    </header>
